# Blog-Management-Service

./: .dockeringore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
app/: .flake8
app/app/: settings.py  settings_ckedittor.py  settings_jazzmin.py  urls.py
app/comment/: apps.py  serializers.py  signals.py  urls.py  views.py
app/core/: admin.py
app/core/admin/: __init__.py  comment_admin.py  post_admin.py  user_admin.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_alter_post_authorname_alter_post_excerpt_and_more.py  0002_alter_post_options_alter_postcategory_options_and_more.py  0002_postcategory.py  0003_alter_comment_options_remove_post_authorname_and_more.py  0003_alter_post_content.py  0003_rename_updateddby_postcategory_updatedby.py  0004_alter_post_authorname.py  0004_alter_postcategory_title.py  0004_auto_20240720_1214.py  0005_alter_post_content.py  0005_alter_postcategory_createdby_and_more.py  0005_alter_postinformation_options_and_more.py  0006_alter_post_content.py  0006_alter_postcategory_status.py  0007_alter_post_content.py  0008_alter_post_content.py  0009_alter_post_relatedposts.py  0010_postrelated_alter_post_relatedposts.py  0011_remove_postrelated_from_post_and_more.py  0012_delete_postrelated.py  0013_rename_postdetail_postanalytics_alter_post_image.py  0014_alter_postcategory_image_and_more.py  0015_alter_postcategory_image.py  0016_postinformation_delete_postanalytics.py  0017_alter_postinformation_post.py  0018_alter_postinformation_post.py  0019_alter_postinformation_post.py
app/core/models/: __init__.py  _base_models.py  comment_models.py  post_models.py  user_models.py
app/post/: middleware.py  serializers.py  signals.py  urls.py  utils.py  views.py
app/post/tests/: test_postCategory_api.py  test_post_api.py
app/socialAuth/google/: apps.py  service.py  urls.py  views.py
app/templates/admin/: change_form.html
app/templates/email/: email_validation_template.html  forget_password_template.html
app/user/: serializers.py  services.py  urls.py  views.py
app/user/tests/: test_user_api.py
erd/: Blog Managment.ndm2  Blog Managment.sql
